handler_test 추가 - add, get 기본 테스트
