# app/docs/swagger.json
@@ -108,8 +108,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/leaderboard.UserRank"
                         }
@@ -294,7 +294,7 @@
         "handler.deleteData": {
             "type": "object",
             "properties": {
-                "isDeleted": {
+                "is_deleted": {
                     "type": "boolean"
                 },
                 "name": {
